Mobile overflow bug attempt to fix

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -17,9 +17,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 0 5%;
   box-sizing: border-box;
-
+  overflow: hidden;
+  
   .logo {
     width: 100%;
     max-width: 1100px;
@@ -32,6 +32,9 @@
     align-items: center;
     margin: 20px 0;
     width: 100%;
+    padding: 0 5%;
+    box-sizing: border-box;
+    overflow: hidden;
 
     h1 {
       color: colors.$clr-orange;
